# Egram

./: CMakeLists.txt  main.cpp
headers/: Chat.h  ChatWidget.h  ClientTCP.h  ContactItem.cpp  ContactItem.h  ContactList.h  DatabaseManager.h  MainWindow.h  chatbannerwidget.h  chatmessagewidget.h
src/: Chat.cpp  ChatWidget.cpp  ClientTCP.cpp  ContactItem.cpp  ContactList.cpp  DatabaseManager.cpp  MainWindow.cpp  chatbannerwidget.cpp  chatmessagewidget.cpp
